[package]
name = "rust-fuse-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.14", features = ["async"] }
napi-derive = "2.14"
tokio = { version = "1.35", features = ["full"] }
libc = "0.2"

[target.'cfg(unix)'.dependencies]
fuser = "0.12"
env_logger = "0.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Storage_ProjectedFileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO"
]}
once_cell = "1.19"

[build-dependencies]
napi-build = "2.1"